--- a/plugins/random/Cargo.toml
+++ b/plugins/random/Cargo.toml
@@ -10,6 +10,6 @@ forced-target = "wasm32-wasi"
 crate-type = ["cdylib"]
 
 [dependencies]
-ayaka-bindings = { path = "../../utils/ayaka-bindings" }
+ayaka-bindings = { workspace = true }
+trylog = { workspace = true }
 rand = "0.8"
-trylog = "0.3"
