--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 tauri-build = { version = "1.0", features = [] }
 
 [dependencies]
-ayaka-runtime = { path = "../../../utils/ayaka-runtime" }
-flexi_logger = { version = "0.24", default-features = false, features = ["colors"] }
+ayaka-runtime = { workspace = true }
+flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "window-all"] }
