--- a/plugins/basictex/Cargo.toml
+++ b/plugins/basictex/Cargo.toml
@@ -10,4 +10,4 @@ forced-target = "wasm32-unknown-unknown"
 crate-type = ["cdylib"]
 
 [dependencies]
-ayaka-bindings = { path = "../../utils/ayaka-bindings" }
+ayaka-bindings = { workspace = true }
