--- a/plugins/markdown/Cargo.toml
+++ b/plugins/markdown/Cargo.toml
@@ -10,5 +10,5 @@ forced-target = "wasm32-unknown-unknown"
 crate-type = ["cdylib"]
 
 [dependencies]
-ayaka-bindings = { path = "../../utils/ayaka-bindings" }
+ayaka-bindings = { workspace = true }
 pulldown-cmark = "0.9"
