--- a/utils/ayaka-bindings-types/Cargo.toml
+++ b/utils/ayaka-bindings-types/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2021"
 
 [dependencies]
-ayaka-primitive = { path = "../ayaka-primitive" }
-fallback = "0.1"
-serde = { version = "1.0", features = ["derive"] }
-log = { version = "0.4", features = ["serde"] }
+ayaka-primitive = { workspace = true }
+fallback = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+log = { workspace = true, features = ["serde"] }
