--- a/utils/ayaka-bindings/Cargo.toml
+++ b/utils/ayaka-bindings/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2021"
 
 [dependencies]
-ayaka-primitive = { path = "../ayaka-primitive" }
-ayaka-bindings-types = { path = "../ayaka-bindings-types" }
-ayaka-bindings-impl = { path = "../ayaka-bindings-impl" }
-serde = "1.0"
-rmp-serde = "1.1"
-log = "0.4"
+ayaka-primitive = { workspace = true }
+ayaka-bindings-types = { workspace = true }
+ayaka-bindings-impl = { workspace = true }
+serde = { workspace = true }
+rmp-serde = { workspace = true }
+log = { workspace = true }
 scopeguard = "1.1"
