--- a/utils/ayaka-plugin-wasmer/Cargo.toml
+++ b/utils/ayaka-plugin-wasmer/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ayaka-plugin = { path = "../ayaka-plugin" }
+ayaka-plugin = { workspace = true }
 wasmer = "3.0"
 wasmer-wasi = "3.0"
