--- a/utils/ayaka-primitive/Cargo.toml
+++ b/utils/ayaka-primitive/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_with = "2.0"
+serde = { workspace = true, features = ["derive"] }
+serde_with = { workspace = true }
 regex = "1"
 
 [dev-dependencies]
-serde_yaml = "0.9"
+serde_yaml = { workspace = true }
