--- a/utils/ayaka-script/Cargo.toml
+++ b/utils/ayaka-script/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ayaka-primitive = { path = "../ayaka-primitive" }
-anyhow = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+ayaka-primitive = { workspace = true }
+anyhow = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+log = { workspace = true }
+trylog = { workspace = true }
 lalrpop-util = { version = "0.19", features = ["lexer"] }
-log = "0.4"
-trylog = "0.3"
 
 [build-dependencies]
 lalrpop = "0.19"
