--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4"
 actix-files = "0.6"
 actix-cors = "0.6"
 trylog = "0.3"
+tryiterator = { git = "https://github.com/Pernosco/tryiterator.git" }
 
 [features]
 default = [ "custom-protocol" ]
