Add vfs to bindings.

--- a/utils/ayaka-bindings-types/Cargo.toml
+++ b/utils/ayaka-bindings-types/Cargo.toml
@@ -9,3 +9,4 @@ ayaka-primitive = { workspace = true }
 fallback = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 log = { workspace = true, features = ["serde"] }
+vfs = { workspace = true }
