--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -14,10 +14,12 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "window-all"] }
 tauri-plugin-window-state = "0.1"
 actix-web = "4"
-actix-files = "0.6"
 actix-cors = "0.6"
 trylog = "0.3"
 tryiterator = { git = "https://github.com/Pernosco/tryiterator.git" }
+vfs = "0.8"
+mime_guess = "2.0"
+stream-future = "0.3"
 
 [features]
 default = [ "custom-protocol" ]
