--- a/utils/ayaka-runtime/Cargo.toml
+++ b/utils/ayaka-runtime/Cargo.toml
@@ -22,6 +22,7 @@ log = { workspace = true }
 trylog = { workspace = true }
 cfg-if = "1.0"
 vfs = { workspace = true }
+frfs = { git = "https://github.com/Tim-Paik/frfs.git" }
 
 ayaka-plugin-nop = { path = "../ayaka-plugin-nop" }
 ayaka-plugin-wasmi = { path = "../ayaka-plugin-wasmi", optional = true }
