--- a/utils/ayaka-runtime/Cargo.toml
+++ b/utils/ayaka-runtime/Cargo.toml
@@ -23,6 +23,7 @@ trylog = { workspace = true }
 cfg-if = "1.0"
 vfs = { workspace = true }
 frfs = { git = "https://github.com/Tim-Paik/frfs.git", features = ["vfs"] }
+rand = "0.8"
 
 ayaka-plugin-nop = { path = "../ayaka-plugin-nop" }
 ayaka-plugin-wasmi = { path = "../ayaka-plugin-wasmi", optional = true }
