--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-plugin-window-state = "0.1"
 trylog = "0.3"
 tryiterator = { git = "https://github.com/Pernosco/tryiterator.git" }
 vfs = "0.8"
-axum = { version = "0.6", default-features = false, features = ["http1", "tokio", "tower-log"] }
+axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
 tower-http = { version = "0.3", features = ["cors"] }
 mime_guess = "2.0"
 stream-future = "0.3"
