Move view_model & settings to ayaka-model.

--- a/bins/Cargo.toml
+++ b/bins/Cargo.toml
@@ -14,6 +14,7 @@ opt-level = "z"
 
 [workspace.dependencies]
 ayaka-runtime = { path = "../utils/ayaka-runtime" }
+ayaka-model = { path = "../utils/ayaka-model" }
 tokio = { version = "1" }
 clap = { version = "4.0" }
 flexi_logger = { version = "0.24", default-features = false, features = ["colors"] }
