--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on:
     branches: ["master"]
     paths:
       - 'utils/**'
+      - 'plugins/**'
   pull_request:
     branches: ["master"]
 jobs:
