Rewrite text parsing with nom.

--- a/examples/Orga/paras/ja/main.yaml
+++ b/examples/Orga/paras/ja/main.yaml
@@ -2,7 +2,7 @@
   title: 車の用意し
   texts:
     - bg: 0
-    - \ch{rd}団長！車の用意できました！
+    - /rd//団長！車の用意できました！
     - exec: $2 = false
     - switches:
       - おう！
@@ -15,7 +15,7 @@
 - tag: walk
   title: 静かだ
   texts:
-    - \ch{org}おう！じゃあな。
+    - /org//おう！じゃあな。
     - /kdr//はい、お気をつけて。
     - bg: 1
     - /rd//なんか静かですね。街の中にはギャラルホルンもいないし本部とはえらい違いだ。
