--- a/utils/ayaka-primitive/Cargo.toml
+++ b/utils/ayaka-primitive/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 serde = { workspace = true, features = ["derive"] }
 serde_with = { workspace = true }
 nom = "7"
+trylog = { workspace = true }
 
 [dev-dependencies]
 serde_yaml = { workspace = true }
