--- a/utils/ayaka-model/Cargo.toml
+++ b/utils/ayaka-model/Cargo.toml
@@ -9,3 +9,6 @@ serde = { workspace = true, features = ["derive"] }
 stream-future = { workspace = true }
 trylog = { workspace = true }
 tryiterator = { workspace = true }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["macros"] }
