--- a/utils/ayaka-model/Cargo.toml
+++ b/utils/ayaka-model/Cargo.toml
@@ -11,4 +11,6 @@ trylog = { workspace = true }
 tryiterator = { workspace = true }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "rt"] }
+tempfile = "3.3"
+serde_json = "1.0"
