--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - 'utils/**'
       - 'plugins/**'
+      - '.github/workflows/test.yml'
   pull_request:
     branches: ["master"]
 jobs:
