--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ tauri-plugin-window-state = "0.1"
 axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
 tower-http = { version = "0.3", features = ["cors", "trace"] }
 mime_guess = "2.0"
+stream-future = "0.3"
 
 [features]
 default = [ "custom-protocol" ]
