--- a/utils/ayaka-runtime/Cargo.toml
+++ b/utils/ayaka-runtime/Cargo.toml
@@ -23,6 +23,7 @@ cfg-if = "1.0"
 vfs = { workspace = true }
 vfs-tar = "0.3"
 rand = "0.8"
+slab = "0.4"
 
 ayaka-plugin-nop = { path = "../ayaka-plugin-nop" }
 ayaka-plugin-wasmi = { path = "../ayaka-plugin-wasmi", optional = true }
