--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "window-all"] }
 tauri-plugin-window-state = "0.1"
-axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
+axum = { version = "0.6", default-features = false, features = ["http1", "tokio", "headers"] }
 tower-http = { version = "0.4", features = ["cors", "trace"] }
 mime_guess = "2.0"
 stream-future = "0.3"
