Update metadata of utils.

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,15 @@ members = [
 
 resolver = "2"
 
+[workspace.package]
+version = "0.2.0"
+edition = "2021"
+authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
+categories = ["game-engines"]
+keywords = ["game", "engine", "galgame"]
+license = "MIT"
+repository = "https://github.com/Uni-Gal/Ayaka"
+
 [workspace.dependencies]
 ayaka-primitive = { path = "ayaka-primitive" }
 ayaka-bindings-types = { path = "ayaka-bindings-types" }
