--- a/utils/ayaka-bindings-types/Cargo.toml
+++ b/utils/ayaka-bindings-types/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "ayaka-bindings-types"
-version = "0.1.0"
-authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
-edition = "2021"
+description = "Types both used in Ayaka runtime and Ayaka plugins."
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+categories.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 ayaka-primitive = { workspace = true }
