--- a/utils/ayaka-plugin-wasmtime/Cargo.toml
+++ b/utils/ayaka-plugin-wasmtime/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "ayaka-plugin-wasmtime"
-version = "0.1.0"
-edition = "2021"
+description = "A plugin runtime for Ayaka, based on Wasmtime."
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+categories.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 ayaka-plugin = { workspace = true }
