--- a/utils/ayaka-script/Cargo.toml
+++ b/utils/ayaka-script/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "ayaka-script"
-version = "0.1.0"
-edition = "2021"
+description = "First-class script language in Ayaka."
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+categories.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 ayaka-primitive = { workspace = true }
