--- a/plugins/live2d/Cargo.toml
+++ b/plugins/live2d/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "live2d"
-version = "0.1.0"
-edition = "2021"
+description = "Plugin for Ayaka. Live2D resource resolver."
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+categories.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
