--- a/plugins/media/Cargo.toml
+++ b/plugins/media/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "media"
-version = "0.1.0"
-edition = "2021"
+description = "Plugin for Ayaka. Multimedia resource resolver."
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+categories.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
