Update metadata of bins.

--- a/bins/Cargo.toml
+++ b/bins/Cargo.toml
@@ -1,11 +1,16 @@
 [workspace]
-members = [
-    "ayaka-check",
-    "ayaka-gui/src-tauri",
-    "ayaka-latex",
-]
+members = ["ayaka-check", "ayaka-gui/src-tauri", "ayaka-latex"]
 
 resolver = "2"
+
+[workspace.package]
+version = "0.2.0"
+edition = "2021"
+authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
+categories = ["game-development"]
+keywords = ["game", "engine", "galgame"]
+license = "MIT"
+repository = "https://github.com/Uni-Gal/Ayaka"
 
 [profile.release]
 lto = true
@@ -17,4 +22,6 @@ ayaka-runtime = { path = "../utils/ayaka-runtime" }
 ayaka-model = { path = "../utils/ayaka-model" }
 tokio = { version = "1" }
 clap = { version = "4" }
-flexi_logger = { version = "0.25", default-features = false, features = ["colors"] }
+flexi_logger = { version = "0.25", default-features = false, features = [
+    "colors",
+] }
