--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "ayaka-gui"
-version = "0.1.0"
+description = "GUI frontend for Ayaka."
+# TODO: inherit from workspace
+version = "0.2.0"
 edition = "2021"
 
 [build-dependencies]
@@ -16,10 +18,14 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "window-all"] }
 tauri-plugin-window-state = "0.1"
-axum = { version = "0.6", default-features = false, features = ["http1", "tokio", "headers"] }
+axum = { version = "0.6", default-features = false, features = [
+    "http1",
+    "tokio",
+    "headers",
+] }
 tower-http = { version = "0.4", features = ["cors", "trace"] }
 mime_guess = "2.0"
 
 [features]
-default = [ "custom-protocol" ]
-custom-protocol = [ "tauri/custom-protocol" ]
+default = ["custom-protocol"]
+custom-protocol = ["tauri/custom-protocol"]
