--- a/plugins/random/Cargo.toml
+++ b/plugins/random/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "random"
+name = "ayaka-plugin-random"
 description = "Plugin for Ayaka. Random number generator."
 version.workspace = true
 edition.workspace = true
@@ -10,6 +10,7 @@ license.workspace = true
 repository.workspace = true
 
 [lib]
+name = "random"
 crate-type = ["cdylib"]
 
 [dependencies]
