--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -1,23 +1,24 @@
 [package]
 name = "ayaka-gui"
 description = "GUI frontend for Ayaka."
-# TODO: inherit from workspace
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+categories.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [build-dependencies]
-# TODO: remove this
-# Avoid 0.13.3, because we use workspace dependencies.
-cargo_toml = "=0.13.2"
-tauri-build = { version = "1.2", features = [] }
+tauri-build = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = [] }
 
 [dependencies]
 ayaka-model = { workspace = true }
 flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["cli", "window-all"] }
-tauri-plugin-window-state = "0.1"
+tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = ["cli", "window-all"] }
+tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "next" }
 axum = { version = "0.6", default-features = false, features = [
     "http1",
     "tokio",
