--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -18,7 +18,6 @@ flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = ["cli", "window-all"] }
-tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "next" }
 axum = { version = "0.6", default-features = false, features = [
     "http1",
     "tokio",
@@ -26,6 +25,9 @@ axum = { version = "0.6", default-features = false, features = [
 ] }
 tower-http = { version = "0.4", features = ["cors", "trace"] }
 mime_guess = "2.0"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "next" }
 
 [features]
 default = ["custom-protocol"]
