--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -14,14 +14,14 @@ name = "ayaka_gui_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = [] }
+tauri-build = { version = "2.0.0-alpha.2", features = [] }
 
 [dependencies]
 ayaka-model = { workspace = true }
 flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = ["cli", "window-all"] }
+tauri = { version = "2.0.0-alpha.4", features = ["cli", "window-all"] }
 axum = { version = "0.6", default-features = false, features = [
     "http1",
     "tokio",
