--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ ayaka-model = { workspace = true }
 flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["cli", "window-all"] }
+tauri = { version = "1.2", features = ["cli", "dialog-open", "window-all"] }
 tauri-plugin-window-state = "0.1"
 axum = { version = "0.6", default-features = false, features = [
     "http1",
