--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ ayaka-model = { workspace = true }
 flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-alpha.4", features = ["cli", "window-all"] }
+tauri = { version = "2.0.0-alpha.4", features = ["cli", "dialog-open", "window-all"] }
 axum = { version = "0.6", default-features = false, features = [
     "http1",
     "tokio",
