--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^18.15.3",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
+    "internal-ip": "^7.0.0",
     "process": "^0.11.10",
     "typescript": "~5.0.2",
     "vite": "^3.2.5",
