--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -29,9 +29,13 @@ axum = { version = "0.6", default-features = false, features = [
 ] }
 tower-http = { version = "0.4", features = ["cors", "trace"] }
 mime_guess = "2.0"
+vfs-tar = { version = "0.4", features = ["mmap"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "next" }
+
+[target.'cfg(target_os = "ios")'.dependencies]
+file-picker-ios = { path = "../../file-picker-ios" }
 
 [features]
 default = ["custom-protocol"]
