--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-alpha.4", features = ["cli", "dialog-open", "window-all"] }
+tokio = { workspace = true, features = ["sync"] }
 axum = { version = "0.6", default-features = false, features = [
     "http1",
     "tokio",
