--- a/bins/file-picker-ios/Cargo.toml
+++ b/bins/file-picker-ios/Cargo.toml
@@ -8,6 +8,7 @@ objc = "0.2"
 stable_deref_trait = "1.2"
 tokio = { version = "1", features = ["sync"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
+pin-project = "1.0"
 
 [build-dependencies]
 cc = "1.0"
