--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -18,7 +18,6 @@ tauri-build = { version = "2.0.0-alpha.2", features = [] }
 
 [dependencies]
 ayaka-model = { workspace = true }
-flexi_logger = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-alpha.4", features = ["cli", "dialog-open", "os-all", "window-all"] }
@@ -34,9 +33,13 @@ vfs-tar = { version = "0.4", features = ["mmap"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "next" }
+flexi_logger = { workspace = true }
 
 [target.'cfg(target_os = "ios")'.dependencies]
 file-picker-ios = { git = "https://github.com/Berrysoft/file-picker-ios.git" }
+
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.13"
 
 [features]
 default = ["custom-protocol"]
