--- a/utils/ayaka-model/Cargo.toml
+++ b/utils/ayaka-model/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+ayaka-plugin = { workspace = true }
 ayaka-runtime = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 stream-future = { workspace = true }
