--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -12,6 +12,7 @@ cargo_toml = "=0.13.2"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
+ayaka-plugin-wasmi = { workspace = true }
 ayaka-model = { workspace = true }
 flexi_logger = { workspace = true }
 serde_json = "1.0"
