--- a/utils/ayaka-model/Cargo.toml
+++ b/utils/ayaka-model/Cargo.toml
@@ -17,6 +17,7 @@ stream-future = { workspace = true }
 trylog = { workspace = true }
 
 [dev-dependencies]
+ayaka-plugin-wasmi = { workspace = true }
 tokio = { version = "1", features = ["macros", "rt"] }
 tempfile = "3.4"
 serde_json = "1.0"
