--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@tauri-apps/api": "^2.0.0-alpha.3",
+    "@tauri-apps/api": "^2.0.0-alpha.4",
+    "@tauri-apps/plugin-app": "^2.0.0-alpha.0",
+    "@tauri-apps/plugin-window": "^2.0.0-alpha.0",
+    "@tauri-apps/plugin-os": "^2.0.0-alpha.0",
     "async-mutex": "^0.4.0",
     "bootstrap": "^5.2.3",
     "bootstrap-dark-5": "^1.1.3",
