--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -14,14 +14,19 @@ name = "ayaka_gui_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-alpha.4", features = [] }
+tauri-build = { version = "2.0.0-alpha.5", features = [] }
 
 [dependencies]
 ayaka-plugin-wasmi = { workspace = true }
 ayaka-model = { workspace = true }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
-tauri = { version = "2.0.0-alpha.8", features = ["cli", "dialog-open", "os-all", "window-all"] }
+tauri = { version = "2.0.0-alpha.9", features = [] }
+clap = { workspace = true, features = ["derive"] }
+tauri-plugin-app = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-window = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tokio = { workspace = true, features = ["sync"] }
 axum = { version = "0.6", default-features = false, features = [
     "http1",
@@ -33,15 +38,11 @@ mime_guess = "2"
 vfs-tar = { version = "0.4", features = ["mmap"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "next" }
+tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 flexi_logger = { workspace = true }
-
-[target.'cfg(target_os = "ios")'.dependencies]
-file-picker-ios = { git = "https://github.com/Berrysoft/file-picker-ios.git" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
-file-picker-android = { git = "https://github.com/Berrysoft/file-picker-android.git" }
 
 [features]
 default = ["custom-protocol"]
