--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -41,6 +41,9 @@ vfs-tar = { version = "0.4", features = ["mmap"] }
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 flexi_logger = { workspace = true }
 
+[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
+base64 = "0.21"
+
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
 
