--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -41,8 +41,8 @@ vfs-tar = { version = "0.4", features = ["mmap"] }
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 flexi_logger = { workspace = true }
 
-[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
-base64 = "0.21"
+[target.'cfg(target_os = "ios")'.dependencies]
+file-picker-ios = { git = "https://github.com/Berrysoft/file-picker-ios.git" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
