--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -24,7 +24,6 @@ serde = { version = "1", features = ["derive"] }
 tauri = { version = "2.0.0-alpha.9", features = [] }
 clap = { workspace = true, features = ["derive"] }
 tauri-plugin-app = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
-tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tauri-plugin-window = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tokio = { workspace = true, features = ["sync"] }
@@ -38,6 +37,7 @@ mime_guess = "2"
 vfs-tar = { version = "0.4", features = ["mmap"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 flexi_logger = { workspace = true }
 
@@ -46,6 +46,7 @@ file-picker-ios = { git = "https://github.com/Berrysoft/file-picker-ios.git" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
+file-picker-android = { git = "https://github.com/Berrysoft/file-picker-android.git" }
 
 [features]
 default = ["custom-protocol"]
