--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -12,8 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@tauri-apps/api": "^2.0.0-alpha.11",
-    "@tauri-apps/plugin-os": "^2.0.0-alpha.4",
+    "@tauri-apps/api": "=2.0.0-alpha.11",
+    "@tauri-apps/plugin-os": "=2.0.0-alpha.4",
     "async-mutex": "^0.4.0",
     "bootstrap": "^5.3.2",
     "bootstrap-dark-5": "^1.1.3",
@@ -21,20 +21,20 @@
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.5.8",
     "timers-promises": "^1.0.1",
-    "vue": "^3.3.8",
+    "vue": "^3.3.9",
     "vue-i18n": "^9.7.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.9",
-    "@types/lodash": "^4.14.201",
+    "@types/bootstrap": "^5.2.10",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.9.2",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/tsconfig": "^0.4.0",
     "internal-ip": "^7.0.0",
     "process": "^0.11.10",
     "typescript": "~5.3.2",
-    "vite": "^5.0.0",
+    "vite": "^5.0.2",
     "vue-tsc": "^1.8.22"
   }
 }
