Update tauri npm packages.

--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -12,8 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@tauri-apps/api": "=2.0.0-alpha.11",
-    "@tauri-apps/plugin-os": "=2.0.0-alpha.6",
+    "@tauri-apps/api": "^2.0.0-alpha.14",
+    "@tauri-apps/plugin-os": "^2.0.0-alpha.6",
     "async-mutex": "^0.4.1",
     "bootstrap": "^5.3.2",
     "bootstrap-dark-5": "^1.1.3",
