--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@tauri-apps/api": "^2.0.0-alpha.14",
-    "@tauri-apps/plugin-os": "^2.0.0-alpha.6",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@tauri-apps/api": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-os": "^2.0.0-beta.0",
     "async-mutex": "^0.4.1",
     "bootstrap": "^5.3.2",
     "bootstrap-dark-5": "^1.1.3",
@@ -22,13 +22,13 @@
     "pixi.js": "^6.5.8",
     "timers-promises": "^1.0.1",
     "vue": "^3.3.9",
-    "vue-i18n": "^9.9.0",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.16",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.5.1",
     "internal-ip": "^7.0.0",
