--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -9,11 +9,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/vue-fontawesome": "^3.0.6",
-    "@tauri-apps/api": "^2.0.0-beta.11",
-    "@tauri-apps/plugin-os": "^2.0.0-beta.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tauri-apps/api": "^2.0.0-rc.4",
+    "@tauri-apps/plugin-os": "^2.0.0-rc.1",
     "async-mutex": "^0.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-dark-5": "^1.1.3",
@@ -21,20 +21,20 @@
     "pixi-live2d-display": "^0.5.0-beta",
     "pixi.js": "^7.4.2",
     "timers-promises": "^1.0.1",
-    "vue": "^3.4.21",
-    "vue-i18n": "^9.10.2",
-    "vue-router": "^4.3.0"
+    "vue": "^3.5.5",
+    "vue-i18n": "10.0.1",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^20.12.2",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^22.5.5",
+    "@vitejs/plugin-vue": "^5.1.3",
     "@vue/tsconfig": "^0.5.1",
-    "internal-ip": "^7.0.0",
+    "internal-ip": "^8.0.0",
     "process": "^0.11.10",
-    "typescript": "~5.4.5",
-    "vite": "^5.2.7",
-    "vue-tsc": "^2.0.19"
+    "typescript": "~5.6.2",
+    "vite": "^5.4.5",
+    "vue-tsc": "^2.1.6"
   }
 }
