--- a/plugins/markdown/Cargo.toml
+++ b/plugins/markdown/Cargo.toml
@@ -15,4 +15,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 ayaka-bindings = { workspace = true }
-pulldown-cmark = "0.9"
+pulldown-cmark = "0.12"
+pulldown-cmark-escape = "0.11"
+latex2mathml = "0.2"
