--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -48,6 +48,6 @@ stream-future = "0.5"
 rmp-serde = "1"
 serde = "1"
 serde_with = "3"
-serde_yaml = "0.9"
+serde_yaml = "0.9.34+deprecated"
 
-vfs = "0.10"
+vfs = "0.12"
