--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -12,8 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@tauri-apps/api": "^2.0.0-rc.4",
-    "@tauri-apps/plugin-os": "^2.0.0-rc.1",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-os": "^2.0.0",
     "async-mutex": "^0.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-dark-5": "^1.1.3",
